<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        style="@style/fragment_default"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_stellar_xlm_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="189dp"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/stellar_wallet"
            android:textAlignment="center"
            android:textColor="@color/white"

            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.212"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="274dp"
            android:layout_height="0dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/choose_account"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:id="@+id/active_account_public_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/account_input_layout"
                app:layout_constraintStart_toStartOf="parent"/>

        <Button
                android:id="@+id/button_create_new_account"
                style="@style/button"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/create_new_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/active_account_public_key" />

        <Button
                android:id="@+id/button_add_existing_account"
                style="@style/button"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/add_existing_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_create_new_account"  />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>