<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/fragment_default"
        android:layout_width="match_parent"
        style="@style/fragment_default"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_stellar_xlm_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="274dp"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/stellar_wallet"
            android:textAlignment="center"
            android:textColor="@color/white"

            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.212"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:background="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="274dp"
            android:layout_height="0dp"

            android:layout_marginBottom="350dp"
            android:layout_marginTop="160dp"
            android:ems="10"

            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/new_contact"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input_layout"
            style="@style/textInput"
            android:layout_width="280dp"
            android:layout_height="50dp"

            android:layout_marginTop="20dp"
            android:autofillHints="Insert new name."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_id_input_layout"
            style="@style/textInput"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:autofillHints="Insert id."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_input_layout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Account id" />
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/button_save"
            style="@style/button"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_id_input_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>