<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        style="@style/fragment_default"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="65dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_stellar_xlm_logo" />

            <TextView
                android:id="@+id/textView16"

                android:layout_width="189dp"
                android:layout_height="30dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/roboto_condensed_bold"
                android:text="@string/stellar_wallet"
                android:textAlignment="center"

                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.212"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView9"
                android:layout_width="274dp"
                android:layout_height="0dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:fontFamily="@font/roboto_condensed_bold"
                android:text="@string/balance"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.591"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view7" />


            <TextView
                android:id="@+id/balance"
                android:layout_width="274dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="@font/roboto_condensed_bold"
                android:text="---"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.591"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="274dp"
                android:layout_height="0dp"

                android:layout_marginTop="44dp"

                android:layout_marginEnd="56dp"
                android:ems="10"
                android:fontFamily="@font/roboto_condensed_bold"
                android:text="@string/transactions"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/balance" />

            <TextView
                android:id="@+id/first_transaction"
                android:layout_width="274dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.598"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView11"
                app:lyout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/second_transaction"
                android:layout_width="274dp"
                android:layout_height="21dp"


                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.598"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_transaction"
                app:lyout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/third_transaction"
                android:layout_width="274dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.598"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/second_transaction"
                app:lyout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/fourth_transaction"
                android:layout_width="274dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.598"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/third_transaction"
                app:lyout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/fifth_transaction"
                android:layout_width="274dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.598"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fourth_transaction"
                app:lyout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>